Revision history for Perl extension App::Info.

0.49

0.48  2006-02-05T03:09:38
      - Added support for Apache2 to App::Info::HTTPD::Apache.
      - Added files_in_dir() method to App::Info::Util to get a list of all of
        the files in a directory.
      - Added shared_mods() method to App::Info::HTTPD::Apache for getting a
        list of shared object libraries compiled for Apache.
      - The mod_perl() method of App::Info::HTTPD::Apache now also checks the
        shared object libraries to determine whether mod_perl is supported by
        the installed Apache.
      - Corrected some documentation pastos in App::Info::Lib::OSSPUUID.
      - Added perl_module() method to App::Info::Lib::OSSPUUID, since the OSSP
        library might be installed, but not OSSP::uuid.

0.47  2005-12-05T22:56:12
      - Fixed "use lib" line in Makefile.PL caused by a bug in Module::Build.

0.46  2005-12-05T22:43:20
      - Added App::Info::Lib::OSSPUUID for information about the OSSP
        UUID library.

0.45  2005-11-08T05:57:05
      - Added "key" attribute to handler request objects.
      - Changed the handler key names for each subclass to more command-line
        friendly versions, such as "path to httpd" instead of just
        "executable". Just `tr/ /-/` to make them into command-line options.

0.44  2005-01-08T00:29:03
      - Yet another fix for test failures on Win32, this time for PostgreSQL.
      - Fixed SQLite tests for DBD::SQLite (which is used to collect
        informationto when the SQLite executable can't be found) work
        properly.
      - Added workaround for strange bug on Perl 5.005_04 where handlers
        assigned to an App::Info object after its creation would be
        prompty forgotten. Reported by Yuval Kogman, who also gave me
        a login to a server with Perl 5.005_04 to fix the problem.

0.43  2004-12-14T19:45:52
      - Added "search_*_name" parameters and methods for searching for