@@ -95,19 +95,19 @@ As well as these parameters to specify alternate names for Apache executables
 
 =over
 
-=item seearch_ab_names
+=item search_ab_names
 
-=item seearch_apachectl_names
+=item search_apachectl_names
 
-=item seearch_apxs_names
+=item search_apxs_names
 
-=item seearch_htdigest_names
+=item search_htdigest_names
 
-=item seearch_htpasswd_names
+=item search_htpasswd_names
 
-=item seearch_logresolve_names
+=item search_logresolve_names
 
-=item seearch_rotatelogs_names
+=item search_rotatelogs_names
 
 =back
 
@@ -1341,8 +1341,10 @@ by the C<new()> constructor to find an executable to execute and collect
 application info. The found directory will also be returned by the C<bin_dir>
 method.
 
-The list of directories by default consists of the path as defined by
-C<< File::Spec->path >>, as well as the following directories:
+The list of directories by default consists of the path as defined by C<<
+File::Spec->path >> and the value returned by
+C<< Apache2::BuildConfig->new->{APXS_BINDIR} >> (if Apache2::BuildConfig is
+installed), as well as the following directories:
 
 =over 4
 
@@ -1387,9 +1389,13 @@ C<< File::Spec->path >>, as well as the following directories:
 =cut
 
 sub search_bin_dirs {
+    # See if mod_perl2 knows where Apache is installed.
+    eval { require Apache2::BuildConfig };
+    my @path = $@ ? () : Apache2::BuildConfig->new->{APXS_BINDIR};
     return (
         shift->SUPER::search_bin_dirs,
         $u->path,
+        @path,
         qw(
            /usr/local/apache/bin
            /usr/local/apache2/bin
@@ -1568,19 +1574,19 @@ And the corresponding search names methods are:
 
 =over
 
-=item seearch_ab_names
+=item search_ab_names
 
-=item seearch_apachectl_names
+=item search_apachectl_names
 
-=item seearch_apxs_names
+=item search_apxs_names
 
-=item seearch_htdigest_names
+=item search_htdigest_names
 
-=item seearch_htpasswd_names
+=item search_htpasswd_names
 
-=item seearch_logresolve_names
+=item search_logresolve_names
 
-=item seearch_rotatelogs_names
+=item search_rotatelogs_names
 
 =back
 
@@ -1617,7 +1623,7 @@ my $find_exe = sub  {
         if (my $exe = $u->first_cat_exe([$self->$meth(), $exe], $bin)) {
             # We found it. Confirm.
             $self->{$key} = $self->confirm(
-                key      => "apache $key",
+                key      => "path to $key",
                 prompt   => "Path to $key executable?",
                 value    => $exe,
                 callback => sub { -x },
@@ -1626,7 +1632,7 @@ my $find_exe = sub  {
         } else {
             # Handle an unknown value.
             $self->{$key} = $self->unknown(
-                key      => "apache $key",
+                key      => "path to $key",
                 prompt   => "Path to $key executable?",
                 callback => sub { -x },
                 error    => 'Not an executable'
