@@ -1,6 +1,12 @@
 Revision history for Perl extension App::Info.
 
 0.49
+      - Fixed typos in App::Info::HTTPD::Apache.
+      - Changed keys for Apache executables such as apxs from, e.g., "apache
+        apxs" to "path to apxs".
+      - Added the value returned by Apache2::BuildConfig->new->{APXS_BINDIR},
+        if Apache2::Build config is installed, to the list of bin directories
+        returned by search_bin_dirs() in App::Info::HTTPD::Apache.
 
 0.48  2006-02-05T03:09:38
       - Added support for Apache2 to App::Info::HTTPD::Apache.
